--- a/DHT22_interface/Makefile
+++ b/DHT22_interface/Makefile
@@ -15,7 +15,7 @@ include $(INCLUDE_DIR)/package.mk
 
 define Package/DHT22_interface
 	SECTION:=utils
-	CATEGORY:=Atom-GPL
+	CATEGORY:=Atlants-GPL
 	TITLE:=DHT22_interface
 	SUBMENU:=Utilities
 	DEPENDS:=wiringPi
